--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hafis Irsal's Company</title>
+    <meta
+      name="description"
+      content="Hafis Irsal' Company, we are at the forefront of technological innovation, committed to transforming ideas into cutting-edge solutions. Our expertise spans software development, Internet of Things (IoT), artificial intelligence (AI), and big data."
+    />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
