--- a/index.html
+++ b/index.html
@@ -16,76 +16,198 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="">
-    <header class="px-24 flex justify-between items-center">
-      <div class="">
-        <a href="/index.html">
+    <header class="">
+      <nav
+        class="relative lg:px-20 px-2 flex justify-between items-center bg-white w-full"
+      >
+        <a class="leading-none" href="/index.html">
           <img
             src="./img/logo.png"
             alt="Hafis Irsal | Technology Solution"
             class="h-16"
           />
         </a>
-      </div>
-      <ul class="flex space-x-8">
-        <a href="#home">
-          <li>Home</li>
-        </a>
-        <a href="#contact">
-          <li>Contact Us</li>
-        </a>
-        <a href="#about">
-          <li>About Us</li>
-        </a>
-        <a href="#portfolio">
-          <li>Portfolio</li>
-        </a>
-        <a href="#blog">
-          <li>Blog</li>
-        </a>
-      </ul>
-      <div class="flex space-x-2">
-        <button>Login</button>
-        <button class="rounded-md bg-[#06bcd5] text-white px-4 py-1">
-          Register
-        </button>
+        <div class="lg:hidden">
+          <button class="navbar-burger flex items-center text-[#06bcd5] p-3">
+            <svg
+              class="block h-4 w-4 fill-current"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Mobile menu</title>
+              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+            </svg>
+          </button>
+        </div>
+        <ul
+          class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6"
+        >
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#contact"
+              >Contact Us</a
+            >
+          </li>
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#about"
+              >About Us</a
+            >
+          </li>
+          <li>
+            <a
+              class="text-sm text-gray-400 hover:text-gray-500"
+              href="#portfolio"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a class="text-sm text-gray-400 hover:text-gray-500" href="#blog"
+              >Blog</a
+            >
+          </li>
+        </ul>
+        <a
+          class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 px-6 bg-gray-50 hover:bg-gray-100 text-sm text-gray-900 font-bold rounded-xl transition duration-200"
+          href="#"
+          >Sign In</a
+        >
+        <a
+          class="hidden lg:inline-block py-2 px-6 bg-[#06bcd5] hover:bg-[#06bcd5] text-sm text-white font-bold rounded-xl transition duration-200"
+          href="#"
+          >Sign up</a
+        >
+      </nav>
+      <div class="navbar-menu relative z-50 hidden">
+        <div class="navbar-backdrop fixed inset-0 bg-gray-800 opacity-25"></div>
+        <nav
+          class="fixed top-0 left-0 bottom-0 flex flex-col w-5/6 max-w-sm py-6 px-6 bg-white border-r overflow-y-auto"
+        >
+          <div class="flex items-center mb-8">
+            <a class="mr-auto text-3xl font-bold leading-none" href="#">
+              <img src="./img/logo.png" alt="" class="h-12" />
+            </a>
+            <button class="navbar-close">
+              <svg
+                class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M6 18L18 6M6 6l12 12"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <div>
+            <ul>
+              <li class="mb-1">
+                <a
+                  class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-[#06bcd5] rounded"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-[#06bcd5] rounded"
+                  href="#contact"
+                  >Contact Us</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-[#06bcd5] rounded"
+                  href="#about"
+                  >About Us</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-[#06bcd5] rounded"
+                  href="#portfolio"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mb-1">
+                <a
+                  class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-[#06bcd5] rounded"
+                  href="#blog"
+                  >Blog</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="mt-auto">
+            <div class="pt-6">
+              <a
+                class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold bg-gray-50 hover:bg-gray-100 rounded-xl"
+                href="#"
+                >Sign in</a
+              >
+              <a
+                class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-[#06bcd5] hover:bg-blue-700 rounded-xl"
+                href="#"
+                >Sign Up</a
+              >
+            </div>
+          </div>
+        </nav>
       </div>
     </header>
 
-    <main id="home" class="px-24 bg-[#e9f8fa] py-32 w-full flex items-center">
-      <div class="w-1/2 mr-12">
-        <p class="text-5xl font-bold mb-4">Solve Your Tech Problem</p>
-        <p class="font-light mb-4 text-xl">
+    <main
+      id="home"
+      class="lg:px-20 px-4 bg-[#e9f8fa] py-32 w-full flex flex-col lg:flex-row items-center"
+    >
+      <div class="w-full lg:w-1/2 lg:mr-12">
+        <p class="text-4xl lg:text-5xl font-bold mb-4">
+          Solve Your Tech Problem
+        </p>
+        <p class="font-light mb-4 text-lg lg:text-xl">
           Anywhere, anytime. We deliver today! And Get an Exceptional Service
           Experience.
         </p>
         <button
           id="btn_order"
-          class="rounded-md bg-[#06bcd5] text-white px-6 py-2"
+          class="rounded-md bg-[#06bcd5] text-white px-6 py-2 mb-8 lg:mb-0"
         >
           Order Now
         </button>
       </div>
-      <div class="w-1/2">
+      <div class="w-full lg:w-1/2">
         <img src="./img/illustration.svg" alt="" />
       </div>
     </main>
 
-    <section id="solution" class="px-24 py-16 flex flex-col items-center">
+    <section
+      id="solution"
+      class="px-4 lg:px-20 py-16 flex flex-col items-center"
+    >
       <p class="text-3xl">Our Solution</p>
       <p class="font-light">We deliver best service in the world</p>
 
-      <div class="w-2/3 mt-12">
-        <div class="flex justify-between space-x-8">
-          <div class="flex w-2/3">
+      <div class="w-full lg:w-2/3 mt-12">
+        <div class="flex flex-col lg:flex-row lg:justify-between lg:space-x-8">
+          <div class="flex w-full lg:w-2/3 mb-8 lg:mb-0">
             <img src="./img/code.svg" alt="" class="w-16 mr-4" />
             <div class="">
               <p class="text-xl">Software Development</p>
               <p class="font-light">+500 services</p>
             </div>
           </div>
-          <div class="flex w-1/2">
+          <div class="flex w-full lg:w-2/3 mb-8 lg:mb-0">
             <img src="./img/ai.svg" alt="" class="w-16 mr-4" />
             <div class="">
               <p class="text-xl">AI Modelling</p>
@@ -94,15 +216,17 @@
             <p></p>
           </div>
         </div>
-        <div class="flex justify-between mt-12 space-x-8">
-          <div class="flex w-2/3">
+        <div
+          class="flex flex-col lg:flex-row lg:justify-between lg:space-x-8 lg:mt-16"
+        >
+          <div class="flex w-full lg:w-2/3 mb-8 lg:mb-0">
             <img src="./img/iot.svg" alt="" class="w-16 mr-4" />
             <div class="">
               <p class="text-xl">IoT Technology</p>
               <p class="font-light">+500 services</p>
             </div>
           </div>
-          <div class="flex w-1/2">
+          <div class="flex w-full lg:w-2/3 mb-8 lg:mb-0">
             <img src="./img/data.svg" alt="" class="w-16 mr-4" />
             <div class="">
               <p class="text-xl">Big Data Enabler</p>
@@ -116,15 +240,15 @@
 
     <section
       id="about"
-      class="px-24 bg-[#e9f8fa] flex flex-col items-center py-16"
+      class="px-4 lg:px-20 bg-[#e9f8fa] flex flex-col items-center py-16"
     >
       <p class="text-2xl">About Us</p>
-      <div class="flex mt-16">
-        <div class="w-1/2">
+      <div class="flex flex-col lg:flex-row mt-16">
+        <div class="w-full lg:w-1/2">
           <img src="./img/team.svg" alt="" />
         </div>
-        <div class="w-1/2">
-          <p class="text-xl mb-4">Innovating Tomorrow, Today</p>
+        <div class="w-full lg:w-1/2">
+          <p class="text-xl mb-4 mt-8 lg:mt-0">Innovating Tomorrow, Today</p>
           <p class="font-light">
             At Hafis Irsal' Company, we are at the forefront of technological
             innovation, committed to transforming ideas into cutting-edge
@@ -137,10 +261,13 @@
       </div>
     </section>
 
-    <section id="portfolio" class="px-24 flex flex-col items-center py-16">
+    <section
+      id="portfolio"
+      class="px-4 lg:px-20 flex flex-col items-center py-16"
+    >
       <p class="text-2xl">Portfolio</p>
       <p class="font-light">Masterpice that already we delivered</p>
-      <div class="grid grid-cols-3 gap-4 mt-16">
+      <div class="grid lg:grid-cols-3 grid-cols-2 gap-4 mt-16">
         <div
           class="rounded-xl bg-[#eeeeee] h-64 flex justify-center items-center"
         >
@@ -212,18 +339,18 @@
 
     <section
       id="blog"
-      class="px-24 bg-[#e9f8fa] flex flex-col items-center py-16"
+      class="px-4 lg:px-20 bg-[#e9f8fa] flex flex-col items-center py-16"
     >
       <p class="text-2xl">Blog</p>
       <p class="font-light">Read any insight about Tech</p>
-      <div class="grid grid-cols-4 mt-8 gap-4">
+      <div class="grid lg:grid-cols-4 grid-cols-2 mt-8 gap-4">
         <div class="">
           <img
             src="https://images.unsplash.com/photo-1517292987719-0369a794ec0f?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt=""
             class="rounded-md mb-2"
           />
-          <p class="text-xl mb-2">The Future of AI: What's Next?</p>
+          <p class="text-lg lg:text-xl mb-2">The Future of AI: What's Next?</p>
           <p class="font-light">
             Artificial Intelligence is evolving at an unprecedented pace. From
             machine learning to neural networks, AI is transforming industries.
@@ -237,7 +364,9 @@
             alt=""
             class="rounded-md mb-2"
           />
-          <p class="text-xl mb-2">Harnessing the Power of Big Data</p>
+          <p class="text-lg lg:text-xl mb-2">
+            Harnessing the Power of Big Data
+          </p>
           <p class="font-light">
             Big data is more than just a buzzword—it's a game-changer. Learn how
             businesses are leveraging big data analytics to uncover insights,
@@ -251,7 +380,7 @@
             alt=""
             class="rounded-md mb-2"
           />
-          <p class="text-xl mb-2">IoT: Connecting the World</p>
+          <p class="text-lg lg:text-xl mb-2">IoT: Connecting the World</p>
           <p class="font-light">
             The Internet of Things (IoT) is revolutionizing the way we live and
             work. Explore how IoT devices are creating smart homes, efficient
@@ -265,7 +394,9 @@
             alt=""
             class="rounded-md mb-2"
           />
-          <p class="text-xl mb-2">Software Development Trends in 2024</p>
+          <p class="text-lg lg:text-xl mb-2">
+            Software Development Trends in 2024
+          </p>
           <p class="font-light">
             Stay ahead of the curve with the latest software development trends.
             From agile methodologies to DevOps, discover the key trends that are
@@ -276,34 +407,41 @@
       </div>
     </section>
 
-    <section id="contact" class="px-24 flex flex-col items-center py-16">
+    <section
+      id="contact"
+      class="px-4 lg:px-20 flex flex-col items-center py-16"
+    >
       <p class="text-2xl">Contact Us</p>
-      <div class="flex mt-16 items-center space-x-4">
-        <div class="w-1/2">
+      <div class="flex flex-col lg:flex-row mt-16 items-center space-x-4">
+        <div class="w-full lg:w-1/2">
           <img src="./img/contact.svg" alt="" />
         </div>
-        <div class="w-1/2">
-          <p class="text-lg mb-4">Email us at:</p>
-          <p class="font-light text-2xl">business@hafisirsal.com</p>
+        <div class="w-full lg:w-1/2 mt-8 lg:mt-0">
+          <p class="text-lg mb-4 text-center lg:text-left">Email us at:</p>
+          <p class="font-medium text-xl lg:text-2xl text-center lg:text-left">
+            business@hafisirsal.com
+          </p>
         </div>
       </div>
     </section>
 
-    <footer class="px-24 bg-[#e9f8fa] py-16 flex w-full justify-center">
-      <div class="w-1/2">
+    <footer
+      class="lg:px-20 px-4 bg-[#e9f8fa] py-16 flex flex-col lg:flex-row w-full justify-center"
+    >
+      <div class="w-full lg:w-1/2">
         <img src="./img/logo.png" alt="" class="h-20" />
         <p>Hafis Irsal's Company</p>
         <p class="mb-4">Email: business@hafisirsal.com</p>
         <p class="font-light">© Hafis Irsal | 2024</p>
       </div>
-      <div class="w-1/3">
+      <div class="w-full lg:w-1/3 mt-8 lg:mt-0">
         <p class="font-bold mb-2">Company</p>
         <p class="font-light">Team</p>
         <p class="font-light">History</p>
         <p class="font-light">Location</p>
         <p class="font-light">Network</p>
       </div>
-      <div class="w-1/3">
+      <div class="w-full lg:w-1/3 mt-8 lg:mt-0">
         <p class="font-bold mb-2">Menu</p>
         <p class="font-light">Home</p>
         <p class="font-light">Contact Us</p>
